# Think2SQL

./: .gitignore  README.md  merge_pred_caches.py  pyproject.toml  train_wrong_queries.json
.devcontainer/: Dockerfile  devcontainer.json
config/: accelerate_config_sft.yaml  config_evaluate.yaml  config_train_grpo.yaml  config_train_sft.yaml
logs/rl/: rl-exp-30-1319840.out  rl-exp-30-1319923.out  rl-exp-30-1319949.out  rl-exp-30-1320817.out  rl-exp-30-1321071.out  rl-exp-30-1321268.out  rl-exp-30-1321692.out  rl-exp-30-1321796.out  rl-exp-30-1321961.out  rl-exp-30-1324398.out  rl-exp-30-1324451.out  rl-exp-30-1324456.out  rl-exp-30-1324467.out  rl-exp-30-1324472.out  rl-exp-30-1324653.out  rl-exp-30-1324666.out
prompts/: base_think_system_multi_tag_prompt.jinja  base_think_system_prompt.jinja  base_think_system_prompt_qwen.jinja  base_think_user_prompt.jinja  deepretrieval_user_prompt.jinja  mult_tag_user_prompt.jinja  no_tag_system_prompt.jinja  no_tag_user_prompt.jinja  omnisql_user_prompt.jinja
scripts/: evaluate.sh  evaluate_fast.sh  grpo.sh  sft.sh  submit_and_log.sh
scripts/evaluation_scripts/: evaluate_arctic_sql.sh  evaluate_deepretrieval.sh  evaluate_deepseek.sh  evaluate_gpt-oss.sh  evaluate_gpt.sh  evaluate_instruct_model.sh  evaluate_omnisql.sh  evaluate_qwen25.sh  evaluate_qwen3-coder.sh  evaluate_qwen3-thinking.sh  evaluate_qwen_3_no_think.sh  evaluate_qwen_3_think.sh  evaluate_sql_r1.sh  evaluate_think2sql.sh
scripts/slurm/: evaluate.sh  train_grpo.sh  train_grpo_multi_node.sh
scripts/utils/: get_model_path_hf_cache.py  get_num_generations.py  slurm_job_requeue.sh  utils.sh  utils_clenup_vllm_if_crash.sh
src/think2sql/: configs.py  logger.py
src/think2sql/data_processor/: __init__.py  get_ddl.py  messages_builder.py
src/think2sql/evaluate/: configs.py  data_readers.py  evaluators.py  main_eval.py  message_builders.py  metrics.py  predictors.py  prompt.py  saver.py  task.py
src/think2sql/grpo/: main_rl.py  rewards.py  rl_trainer.py  think2sql_trainer.py
src/think2sql/grpo/rewards/: get_rewards_fun.py  rewards_answer_content.py  rewards_reasoning_content.py  utils.py
src/think2sql/sft/: main_sft.py  sft_trainer.py
src/think2sql/utils/: callbacks.py  data.py  hf_model.py  hub.py  sql.py  wandb.py
tests/: ex_majority_voting.py  test_ex_majority_voting.py  test_reward.py  test_sql_utils.py
