[project]
name = "think2sql"
version = "0.1.0"
authors = [
    { name = "Simone Papicchio", email = "simone.papicchio@polito.it" },
    { name = "Simone Rossi", email = "simone.rossi.93@gmail.com" },
]
description = "Official implementation of Think2SQL"
# readme = "README.md"
requires-python = ">=3.12,<3.13"  # vllm needs Python <3.13 with dev
dependencies = [
    "deepspeed>=0.16.8",
    "deepspeed-kernels>=0.0.1.dev1698255861",
    "vllm>=0.10.0,<0.10.2",
    "ray",
    "accelerate>=1.4.0",
    "transformers>=4.56.0",
    "trl>=0.23.0",
    "more_itertools",
    "datasets>=4.0.0",
    "hf-transfer>=0.1.9",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "nl2sqlevaluator>=1.2.4",
    "python-dotenv>=1.1.1",
    "sentencepiece>=0.2.1",
    "wandb>=0.21.3",
    "bitsandbytes>=0.47.0",
    "lighteval[vllm]>=0.11.0",
    "fire>=0.7.1",
    "matplotlib>=3.10.6",
    "emoji>=2.15.0",
    "pytest>=8.4.2",
    "notebook>=7.4.7",
    "litellm[openai,togetherai]>=1.77.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
